[tool.poetry]
name = "depthcharge"
version = "0.1.0"
description = "A hacky module to patch using bytecode"
authors = ["perry <perryjrandall@gmail.com>"]
repository = "https://github.com/perryjrandall/depthcharge.git"

[tool.poetry.dependencies]
python = "^3.8"
byteasm = { git = "https://github.com/perryjrandall/byteasm.git", rev = "1e8cb61" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
